--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>test</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">left</div>
+            <div class="col-md-8">right</div>
+
+        </div>
+    </div>
 </body>
 </html>
