--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="swiper-wrapper swiper-slide-wraper">
                       <div class="swiper-slide">
                         <h1>PRZESZKLONE PARTERY DLA BIZNESU<br>
-                            <span>OD 8600</span> pln net/m2
+                            <span>OD 8600</span> pln net/m<sup>2</sup>
                         </h1>
                         <h2>ODLICZ VAT!</h2>
                         <h3 class="main-color"><b> MASZ PYTANIE ?</b></h3>
@@ -39,8 +39,8 @@
 
                             <!-- Multiple Checkboxes (inline) -->
                             <div class="check check-one input-group">
-                                <input name="oferta[]" type="checkbox" id="147m" class="lokal" value="Lokal 147m"/><label for="147m">lokal 147 m2</label>
-                                <input  name="oferta[]" type="checkbox" id="183m" class="lokal" value="Lokal 183m"/><label for="183m">lokal 183 m2</label>
+                                <input name="oferta[]" type="checkbox" id="147m" class="lokal" value="Lokal 147m"/><label for="147m">lokal 147 m<sup>2</sup></label>
+                                <input  name="oferta[]" type="checkbox" id="183m" class="lokal" value="Lokal 183m"/><label for="183m">lokal 183 m<sup>2</sup></label>
                                 <div class="error" id="ofertaErr"></div>
                             </div>
                             <div class="check input-group">
@@ -83,14 +83,14 @@
             <div class="article col-lg-9 col-md-8 col-sm-8 col-xs-12 first-xs last-sm">
                 <div class="top-left-corner">
                     <img src="img/logo.jpg" alt="">
-                    <a href="#jsModal" id="popup" class="jsModalTrigger">ZOBACZ <br>NA MAPIE</a>
+                    <a href="#mapa" id="popup" class="jsModalTrigger">ZOBACZ <br>NA MAPIE</a>
                 </div>
                 <div class="top-right-corner">
                     <a class="facebook" href="https://wp.pl"><img src="img/facebook.png" alt=""></a>
                     <a class="tel" href="tel:">
                         <span> Masz pytania ?</span><br> +48 811 222 000
                     </a>
-                    <a href="#jsModal2" id="popup" class="jsModalTrigger"><img class="see" src="img/video-btn.png" alt=""></a>
+                    <a href="#video" id="popup" class="jsModalTrigger"><img class="see" src="img/video-btn.png" alt=""></a>
                 </div>
                 
                  <!-- Swiper -->
@@ -142,7 +142,7 @@
         </div>
 
     <!-- google map    -->
-    <div id="jsModal" class="modal">
+    <div id="mapa" class="modal">
         <div class="modal__overlay jsOverlay"></div>
         <div class="modal__container">
             <div id="map"></div>
@@ -150,7 +150,7 @@
         </div>
     </div>
     <!-- Video -->
-    <div id="jsModal2" class="modal">
+    <div id="video" class="modal">
         <div class="modal__overlay jsOverlay"></div>
         <div class="modal__container">
             <!-- <iframe id="video" width="100%" height="100%" src="//www.youtube.com/embed/9vvTeEpHui8?rel=0" frameborder="0" allowfullscreen></iframe> -->
