--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Pomarańczarnia | Wawrzyszewska 11 / Obozowa </title>
+    <meta name="description" content="Przeszklone partery dla biznesu Od 8699 pln net/m2">
+
+     <!-- Compartir -->
+     <meta property="og:locale" content="pl_PL">
+     <meta property="og:type" content="website">
+     <meta property="og:title" content="Pomarańczarnia | Wawrzyszewska 11 / Obozowa">
+     <meta property="og:url" content="??">
+     <meta property="og:site_name" content="Pomarańczarnia | Wawrzyszewska 11 / Obozowa">
+     <meta property="og:image" content="??/img/compartir.jpg">
+     <meta property="og:image:secure_url" content="??/img/compartir.jpg">
+     <meta property="og:image:width" content="1200">
+     <meta property="og:image:height" content="627">
+     <meta name="twitter:card" content="summary_large_image">
+     <meta name="twitter:title" content="Pomarańczarnia | Wawrzyszewska 11 / Obozowa">
+     <meta name="twitter:image" content="??/img/compartir.jpg">
+
 </head>
 <body>
     
@@ -20,7 +36,7 @@
                         </h1>
                         <h2>ODLICZ VAT!</h2>
                         <h3 class="main-color"><b> MASZ PYTANIE ?</b></h3>
-                        <form name="contactForm" action="" method="post" onsubmit="return validateForm()">
+                        <form name="contactForm" action="target.php" method="post" onsubmit="return validateForm()">
                             <div class="input-group">
                                 <span class="ic person"></span>
                                 <input type="text" name="fName" placeholder="Imię i nazwisko">
@@ -80,13 +96,13 @@
                 <div class="swiper-scrollbar"></div>
               </div> 
             </div>
-            <div class="article col-lg-9 col-md-8 col-sm-8 col-xs-12 first-xs last-sm">
+            <div class="container col-lg-9 col-md-8 col-sm-8 col-xs-12 first-xs last-sm">
                 <div class="top-left-corner">
                     <img src="img/logo.jpg" alt="">
                     <a href="#mapa" id="popup" class="jsModalTrigger">ZOBACZ <br>NA MAPIE</a>
                 </div>
                 <div class="top-right-corner">
-                    <a class="facebook" href="https://wp.pl"><img src="img/facebook.png" alt=""></a>
+                    <a class="facebook" href="https://wp.pl" target="_blank"><img src="img/facebook.png" alt=""></a>
                     <a class="tel" href="tel:">
                         <span> Masz pytania ?</span><br> +48 811 222 000
                     </a>
