--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <title>Pomarańczarnia | Wawrzyszewska 11 / Obozowa </title>
     <meta name="description" content="Przeszklone partery dla biznesu Od 8699 pln net/m2">
 
@@ -63,7 +63,7 @@
                                 <label for="zgodaDane">
                                     <input name="zgodaDane" id="zgodaDane" type="checkbox" class="zgoda" value="Zaakceptowana zgoda o przetwarzanie Danych osobowych" />
                                     <span id="zgodaWiecej">
-                                        Wyrażam zgodę na przetwarzanie moich danych osobowych <a href="">(więcej)</a>
+                                        Wyrażam zgodę na przetwarzanie moich danych osobowych <span>(więcej)</span>
                                     </span>
                                   <div class="error" id="zgodaDaneErr"></div>
                                 </label>
@@ -74,7 +74,7 @@
                                     <input name="zgodaTel" id="zgodaTel" type="checkbox" class="zgoda"  value="Potwierdzona zgoda o otrzymywanie informacji marketingowych drogą telefoniczną" />
                                     <span id="zgodaWiecej2"> 
                                         Wyrażam zgodę na otrzymywanie drogą telefoniczną informacje
-                                        handlowe w tym marketingowe  <a href="#" >(więcej)</a>
+                                        handlowe w tym marketingowe  <span>(więcej)</span>
                                     </span>
                                     <div class="error" id="zgodaTelErr"></div>
                                 </label>
