--- a/thx.html
+++ b/thx.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <title>Pomarańczarnia | Wawrzyszewska 11 / Obozowa </title>
     <meta name="description" content="Przeszklone partery dla biznesu Od 8699 pln net/m2">
 
