--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <label for="zgodaDane">
                                     <input name="zgodaDane" id="zgodaDane" type="checkbox" class="zgoda" value="Zaakceptowana zgoda o przetwarzanie Danych osobowych" />
                                     <span id="zgodaWiecej">
-                                        Wyrażam zgodę na przetwarzanie moich danych osobowych <span>(więcej)</span>
+                                        Wyrażam zgodę na przesyłanie przez Gemma Inwestycje z siedzibą w Warszawie (KRS: 0000342035) na podany adres e-mail informacji handlowych oraz na przetwarzanie moich danych osobowych w celu przedstawiania ofert nabycia nieruchomości – szczegóły w  <a target="_blank" href="https://www.gemma.waw.pl/files/upload/PolitykaPrywatnosci.pdf">Polityce Prywatności Gemma Inwestycje</a>
                                     </span>
                                   <div class="error" id="zgodaDaneErr"></div>
                                 </label>
@@ -73,12 +73,11 @@
                                 <label for="zgodaTel"> 
                                     <input name="zgodaTel" id="zgodaTel" type="checkbox" class="zgoda"  value="Potwierdzona zgoda o otrzymywanie informacji marketingowych drogą telefoniczną" />
                                     <span id="zgodaWiecej2"> 
-                                        Wyrażam zgodę na otrzymywanie drogą telefoniczną informacje
-                                        handlowe w tym marketingowe  <span>(więcej)</span>
+                                        Wyrażam zgodę na kontakt przez Gemma Inwestycje z siedzibą w Warszawie (KRS: 0000342035) na podany numer telefonu (wiadomości SMS i połączenia głosowe) oraz na przetwarzanie moich danych osobowych w celu przedstawiania ofert nabycia nieruchomości – szczegóły w <a target="_blank" href="https://www.gemma.waw.pl/files/upload/PolitykaPrywatnosci.pdf">Polityce Prywatności Gemma Inwestycje</a>
                                     </span>
                                     <div class="error" id="zgodaTelErr"></div>
                                 </label>
-                                <span id="zgodaWiecejDisplay2" class="tooltip">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur alias tenetur voluptates repudiandae? Illo eum nobis praesentium, consequuntur quasi ipsum aperiam dignissimos alias. Nostrum corporis, ab rem enim molestiae ratione!</span>
+                                <span id="zgodaWiecejDisplay2" class="tooltip">Wyrażam zgodę na kontakt przez Gemma Inwestycje z siedzibą w Warszawie (KRS: 0000342035) na podany numer telefonu (wiadomości SMS i połączenia głosowe) oraz na przetwarzanie moich danych osobowych w celu przedstawiania ofert nabycia nieruchomości – szczegóły w <a target= href="https://www.gemma.waw.pl/files/upload/PolitykaPrywatnosci.pdf">Polityce Prywatności Gemma Inwestycje</a></span>
                             </div>
 
                             <div class="input-group">
@@ -104,7 +103,7 @@
                 <div class="top-right-corner">
                     <a class="facebook" href="https://wp.pl" target="_blank"><img src="img/facebook.png" alt=""></a>
                     <a class="tel" href="tel:">
-                        <span> Masz pytania ?</span><br> +48 811 222 000
+                        <span> Masz pytania ?</span><br> +48 501 816 586
                     </a>
                     <a href="#video" id="popup" class="jsModalTrigger"><img class="see" src="img/video-btn.png" alt=""></a>
                 </div>
@@ -151,7 +150,7 @@
                                     1000 mieszkańcami</p>
                             </div>
                         </div>
-                        <a href="#">Pobierz plan lokali usługowych </a>
+                        <a href="img/U01.pdf" target="_blank">Pobierz plan lokali usługowych </a>
                     </div>
                 </div>
             </div>
@@ -170,7 +169,7 @@
         <div class="modal__overlay jsOverlay"></div>
         <div class="modal__container">
             <!-- <iframe id="video" width="100%" height="100%" src="//www.youtube.com/embed/9vvTeEpHui8?rel=0" frameborder="0" allowfullscreen></iframe> -->
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/O1OYWiSbgi0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ig1LdpJ8ng0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <button class="modal__close jsModalClose">&#10005;</button>
         </div>
     </div>
