--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     </span>
                                   <div class="error" id="zgodaDaneErr"></div>
                                 </label>
-                                <span id="zgodaWiecejDisplay" class="tooltip">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur alias tenetur voluptates repudiandae? Illo eum nobis praesentium, consequuntur quasi ipsum aperiam dignissimos alias. Nostrum corporis, ab rem enim molestiae ratione!</span>
+                                <!-- <span id="zgodaWiecejDisplay" class="tooltip">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur alias tenetur voluptates repudiandae? Illo eum nobis praesentium, consequuntur quasi ipsum aperiam dignissimos alias. Nostrum corporis, ab rem enim molestiae ratione!</span> -->
                             </div>
                             <div class="check input-group">
                                 <label for="zgodaTel"> 
@@ -77,7 +77,7 @@
                                     </span>
                                     <div class="error" id="zgodaTelErr"></div>
                                 </label>
-                                <span id="zgodaWiecejDisplay2" class="tooltip">Wyrażam zgodę na kontakt przez Gemma Inwestycje z siedzibą w Warszawie (KRS: 0000342035) na podany numer telefonu (wiadomości SMS i połączenia głosowe) oraz na przetwarzanie moich danych osobowych w celu przedstawiania ofert nabycia nieruchomości – szczegóły w <a target= href="https://www.gemma.waw.pl/files/upload/PolitykaPrywatnosci.pdf">Polityce Prywatności Gemma Inwestycje</a></span>
+                                <!-- <span id="zgodaWiecejDisplay2" class="tooltip">Wyrażam zgodę na kontakt przez Gemma Inwestycje z siedzibą w Warszawie (KRS: 0000342035) na podany numer telefonu (wiadomości SMS i połączenia głosowe) oraz na przetwarzanie moich danych osobowych w celu przedstawiania ofert nabycia nieruchomości – szczegóły w <a target= href="https://www.gemma.waw.pl/files/upload/PolitykaPrywatnosci.pdf">Polityce Prywatności Gemma Inwestycje</a></span> -->
                             </div>
 
                             <div class="input-group">
